<resources>
    <!-- The next line is for FirebaseUI customization of the app bar title. -->
    <string name="app_name">Sign in</string>
    <string name="app_name_real">Better Barter System</string>
    <string name="facebook_application_id" translatable="false">451093265386701</string>
    <string name="signin_cancelled">Sign-in cancelled. Please try again.</string>
    <string name="no_internet">No internet connection. Please try again.</string>
    <string name="unknown_error">Unknown error. Please try again.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="homelabel_nav">Home</string>
    <string name="searchlabel_nav">Search</string>
    <string name="createlistinglabel_nav">Create Listing</string>
    <string name="managelistings_nav">Manage Listings</string>
    <string name="accountlabel_nav">Account</string>
    <string name="myaccount_nav">My Account</string>
    <string name="signout_nav">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
